--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -1,53 +1,53 @@
-pipeline {
-    agent any 
+// pipeline {
+//     agent any 
 
-    // environment {
-    //     // DOCKER_ID=credentials('DOCKER_ID')
-    //     // DOCKER_PASSWORD=credentials('DOCKER_PASSWORD')
-    // }
+//     // environment {
+//     //     // DOCKER_ID=credentials('DOCKER_ID')
+//     //     // DOCKER_PASSWORD=credentials('DOCKER_PASSWORD')
+//     // }
 
-    stages {
-        stage('Build') { 
-            steps {
-                // docker build -t jpk912/jenkins-test . 
-                retry(3) {
-                    sh '''#!/bin/bash
-                    echo "Building image..."
+//     stages {
+//         stage('Build') { 
+//             steps {
+//                 // docker build -t jpk912/jenkins-test . 
+//                 retry(3) {
+//                     sh '''#!/bin/bash
+//                     echo "Building image..."
                     
-                ''' 
-                }
-                timeout(time: 300, unit:'SECONDS'){
-                    sh 'sleep 10'
-                }
-            }
-        }
-        stage('Test') { 
-            steps {
-                // 
-                sh '''#!/bin/bash
-                    echo "no test scripts"
-                ''' 
-            }
-        }
-        stage('Deploy') { 
-            steps {
-                retry(3) {// echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-                //docker push jpk912/jenkins-test-repo
-                //log in and push to docker hub
-                sh '''#!/bin/bash
-                    echo "deploying........"
-                '''
-                }
-            }
-        }
-    }
-}
+//                 ''' 
+//                 }
+//                 timeout(time: 300, unit:'SECONDS'){
+//                     sh 'sleep 10'
+//                 }
+//             }
+//         }
+//         stage('Test') { 
+//             steps {
+//                 // 
+//                 sh '''#!/bin/bash
+//                     echo "no test scripts"
+//                 ''' 
+//             }
+//         }
+//         stage('Deploy') { 
+//             steps {
+//                 retry(3) {// echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+//                 //docker push jpk912/jenkins-test-repo
+//                 //log in and push to docker hub
+//                 sh '''#!/bin/bash
+//                     echo "deploying........"
+//                 '''
+//                 }
+//             }
+//         }
+//     }
+// }
 
 node {    
 
     environment {
         dockerImage = ''
-        registry = 'jpk912/appointment2'
+        registry = 'jpk912/appointment'
         //import docker hub credentials
         //REGISTRY_CREDENTIAL = credentials('DOCKER_ID')
     }
@@ -60,7 +60,7 @@ node {
             sh ''' #!/bin/bash
                 echo "Building apache...."
             '''
-            website = docker.build("jpk912/appointment2-jenkins-apache-aws", "-f nginx/Dockerfile .")
+            //website = docker.build("jpk912/appointment2-jenkins-apache-aws", "-f nginx/Dockerfile .")
        }     
       stage('Test image') {           
             sh '''
@@ -69,11 +69,15 @@ node {
         }     
        stage('Push image') {
 
+            sh ''' #!/bin/bash
+                echo "Pushing Image...."
+            '''
+
            //push to docker-hub
-            docker.withRegistry('https://registry.hub.docker.com', 'DOCKER_ID') {            
-                website.push("${env.BUILD_NUMBER}")            
-                website.push("latest")        
-            }   
+            // docker.withRegistry('https://registry.hub.docker.com', 'DOCKER_ID') {            
+            //     website.push("${env.BUILD_NUMBER}")            
+            //     website.push("latest")        
+            // }   
             
         }
 }
